# totp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md
.github/workflows/: rust.yml  security.yml
examples/: gen_secret.rs  no_alloc.rs  qr_code.rs  rfc-6238.rs  secret.rs  steam.rs  ttl.rs
qrcodegen-image/: CHANGELOG.md  Cargo.toml  README.md
qrcodegen-image/benches/: benches.rs
qrcodegen-image/src/: lib.rs
src/: algorithm.rs  builder.rs  custom_providers.rs  error.rs  lib.rs  main.rs  migration.rs  qr.rs  rfc.rs  secret.rs  token.rs  url.rs  url_error.rs
