[package]
name = "totp-rs"
version = "5.7.0"
authors = ["Cleo Rebert <cleo.rebert@gmail.com>"]
rust-version = "1.88"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "RFC-compliant TOTP implementation with ease of use as a goal and additionnal QoL features."
repository = "https://github.com/constantoine/totp-rs"
homepage = "https://github.com/constantoine/totp-rs"
keywords = ["authentication", "2fa", "totp", "hmac", "otp"]
categories = ["authentication", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
gen_secret = ["rand"]
otpauth = ["url", "urlencoding"]
qr = ["dep:qrcodegen-image", "otpauth"]
serde_support = ["serde", "zeroize?/serde"]
steam = []
std = []

[dependencies]
sha2 = { version = "0.10", default-features = false }
sha1 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
base32 = { version = "0.5", default-features = false }
constant_time_eq = { version = "0.4", default-features = false }

serde = { version = "1.0", features = [
  "alloc",
  "derive",
], optional = true, default-features = false }
url = { version = "2.4", default-features = false, optional = true }
urlencoding = { version = "2.1", optional = true, default-features = false }
rand = { version = "0.10", features = [
  "thread_rng",
], optional = true, default-features = false }
zeroize = { version = "1.8", features = [
  "alloc",
  "derive",
], optional = true, default-features = false }
qrcodegen-image = { version = "1.5", features = [
  "base64",
], optional = true, default-features = false }

[[example]]
name = "steam"
required-features = ["steam"]

[[example]]
name = "gen_secret"
required-features = ["gen_secret", "otpauth"]
