[package]
name = "qrcodegen-image"
version = "1.4.0"
edition = "2021"
authors = ["Cleo Rebert <cleo.rebert@gmail.com>"]
rust-version = "1.61"
readme = "README.md"
license = "MIT"
description = "Draw QR codes to a PNG canvas. Wrapper around the qrcodegen and image crates."
repository = "https://github.com/constantoine/totp-rs"
homepage = "https://github.com/constantoine/totp-rs"

[package.metadata.docs.rs]
features = [ "base64" ]

[features]
base64 = ["dep:base64"]

[dependencies]
qrcodegen = "1.8"
image = { version = "0.24", features = ["png"], default-features = false}
base64 = { version = "0.22", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false